src/assets/sign-up/scss/_custom.scss
.modal-content {
    box-shadow: 10px 10px 10px 3px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.modal {
    position: fixed;
    top: 40px;
    left: 0;
    z-index: 1050;
    display: none;
    width: 100%;
    height: 100%;
    overflow: hidden;
    outline: 0;
}

app-order {
    //height: 100vh;
    display: block;
    overflow-x: hidden;
}

app-ema-fact-sheet {
    form {
        height: calc(100vh - 240px);
        overflow: hidden;
    }
}

.ema-scroll-view {
    height: calc(100vh - 294px);
    overflow-y: auto;
    &::-webkit-scrollbar {
        display: none;
    }
}

header#header {
    padding-top: 5px;
    border-bottom: 5px solid #DF0000;
    width: 100%;
    height: 85px;
    position: fixed;
    z-index: 9999;
    background: white;
    div.content-header {
        padding-left: 10%;
        padding-right: 5%;
    }
}

.body {
    font-size: 20px;
    font-family: MyriadPro-Cond;
}

select,
option {
    font-family: MyriadPro-Cond !important;
}

div.left-image {
    width: 100%;
    min-height: calc(100vh - 0px);
    overflow: hidden;
    img {
        display: inline-block;
        height: 100%;
        position: absolute;
    }
}

.form-content {
    padding: 30px 15px;
    margin-bottom: 60px;
    background-color: #f6f6f6;
}

.form-control {
    text-indent: 10px;
    &:focus {
        box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25);
    }
}

%input-tail {
    float: right;
    margin-right: 5px;
    margin-top: -40px;
    position: relative;
    z-index: 2;
    color: #ababab;
    &:hover {
        cursor: pointer;
    }
}

%arrow-tail {
    &:before {
        position: absolute;
        display: block;
        content: "";
        color: #ffffff;
        width: 20px;
        top: 21px;
        right: 35px;
        border-bottom: solid 1.4px;
        -webkit-transform: translatex(4px);
        transform: translatex(4px);
    }
    &:after {
        position: absolute;
        display: block;
        content: "";
        color: #ffffff;
        width: 12px;
        height: 12px;
        border-top: solid 1.4px;
        border-right: solid 1.4px;
        top: 13px;
        right: 26px;
        -webkit-transform-origin: 0 0;
        transform-origin: 0 0;
        -webkit-transform: rotatez(45deg);
        transform: rotatez(45deg);
    }
    &:hover {
        cursor: pointer;
    }
}

.input-icon {
    @extend %input-tail;
    margin-top: -35px;
    margin-right: 25px;
}

.input-button {
    @extend %input-tail;
    border: none;
    border-radius: 3px;
    background-color: #000000;
    span {
        padding: 5px 10px;
        font-weight: bold;
        color: #ffffff;
        font-family: MyriadPro-Cond;
    }
}

.order-tab {
    font-size: 18px;
    a {
        color: #6c757d;
        text-decoration: none;
        padding: 0 10px 5px;
    }
}

.fa-times:before {
    content: "\f00d";
    color: #d2232a;
}

.varify-button {
    float: right;
    margin-right: 75px;
    margin-top: -40px;
    position: relative;
    z-index: 2;
    color: #ababab;
}

.varify-button span {
    padding: 5px 20px;
    font-weight: 700;
    color: #fff;
    font-family: MyriadPro-Cond;
    background-color: cadetblue;
}

.order-tab-active {
    font-weight: bold;
    color: #000000;
    border-bottom: 3px solid #000000;
    font-size: 20px;
    transition: all 0.3s ease;
    a {
        color: #000000;
    }
}

.order-tab-available {
    a {
        color: #2d2d2d;
        font-size: 18px;
    }
}

.list-step-tab {
    padding-top: 30px;
    li {
        list-style: none;
        width: 15px;
        height: 15px;
        border-radius: 50%;
        margin: 0 7px 0;
        background-color: #e8e8e8;
        padding: 0;
        a {
            color: #e8e8e8;
            display: block;
            font-size: 1px;
        }
    }
    .pass {
        background-color: #d9232a;
    }
    .active {
        width: 22px;
        height: 22px;
        margin: -4px 7px 0;
        transition: all 0.3s ease;
        background-color: #d9232a;
        a {
            font-size: 15px;
            font-family: MyriadPro-Bold;
            color: #ffffff;
            display: block;
        }
    }
}

.form-control {
    height: 45px;
    border-radius: 0;
}

.form-control-label {
    font-family: MyriadPro-Cond;
    font-weight: bold;
}

.content-plan-detail {
    //height: 530px;
    .p-textbox-left {
        padding-left: 0px;
    }
    .p-textbox-right {
        padding-right: 0px;
    }
}

.form-content-personal-particular {
    height: 650px;
}

.btn-submit {
    background-color: #d9232a;
    border-radius: 4px;
    padding: 11px 30px;
    color: #ffffff !important;
    font-family: Lato-Bold;
}

.btn-resend-otp {
    font-family: MyriadPro-Light;
    color: #000000 !important;
    background-color: #ffffff;
}

.input-contain-button {
    display: flex;
    padding: 0;
    &:focus-within {
        color: #495057;
        background-color: #000000;
        border-color: #80bdff;
        outline: 0;
        box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25);
    }
    input {
        flex: 1;
        border: none;
        text-indent: 10px;
        &:focus {
            border: none;
            outline: none;
            box-shadow: none;
        }
    }
    button {
        margin: 3px 5px 3px;
        border: none;
        border-radius: 3px;
        background-color: #000000;
        &:hover {
            cursor: pointer;
        }
        span {
            padding: 5px 10px;
            font-weight: bold;
            color: #ffffff;
            font-family: MyriadPro-Cond;
        }
    }
}
/* ... */

